bugfix: hide overflow of wrapper
(So that messages dont visibly fly off screen)

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ body {
 
 #main-wrapper {
   position: relative;
+  overflow: hidden;
 }
 
 #main-wrapper .cover {
